Image cropping fixed

--- a/css/masterefsaestyle.css
+++ b/css/masterefsaestyle.css
@@ -946,7 +946,7 @@ a.button {
     background-size: contain;
     position: relative;
     width:60%;
-    height:17vw;
+    height:9vw;
     left:0;
     right:0;
     overflow: auto;
